[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Sprites/Buttons/regularButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/Other/AudioTheme.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Audio/Music/optionsTheme.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Scripts/GUI/Menus/OptionsMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Themes/OptionsMenu.tres" type="Theme" id=5]
[ext_resource path="res://Assets/Fonts/pixelmix-font/PixelmixRegular-z07w.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Sprites/background.png" type="Texture" id=7]
[ext_resource path="res://Assets/Scripts/GUI/IndividualElements/MenuButton.gd" type="Script" id=8]
[ext_resource path="res://Assets/Sprites/sliderGrabber.png" type="Texture" id=9]
[ext_resource path="res://Assets/Scenes/Other/SliderColourPicker.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Sprites/Buttons/regularButtonPressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/Scenes/Other/ToggleButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Sprites/Buttons/toggleButtonOn.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Buttons/toggleButtonOff.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Buttons/toggleButtonHover.png" type="Texture" id=15]
[ext_resource path="res://Assets/Scripts/GUI/IndividualElements/VolumeSlider.gd" type="Script" id=16]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float starPercentage;
uniform vec4 starColour;
uniform vec4 backColour;

float random (vec2 uv) {
    return fract(sin(dot(uv.xy,
        vec2(12.9898,78.233))) * 43758.5453123);
}

void fragment() {
	if (random(UV) < (starPercentage/100.0)) {
		COLOR = starColour;
	}
	else {
		COLOR = backColour;
	}
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 7 )
shader_param/starPercentage = 0.001
shader_param/starColour = Plane( 1, 1, 0.8, 1 )
shader_param/backColour = Plane( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Animation" id=19]
resource_name = "Off"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ButtonContainer:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ButtonContainer/YesButton:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ButtonContainer/NoButton:mouse_filter")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=17]
resource_name = "On"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ButtonContainer:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ButtonContainer/YesButton:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ButtonContainer/NoButton:mouse_filter")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mouse_filter")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ButtonContainer:mouse_filter")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ButtonContainer/YesButton:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ButtonContainer/NoButton:mouse_filter")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[node name="Options" type="Node2D"]

[node name="AudioTheme" parent="." instance=ExtResource( 2 )]
stream = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 10 )
position = Vector2( 2, 1 )
scale = Vector2( 2.01111, 2.01111 )
texture = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="UILayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="Menu" type="Control" parent="UILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 4 )

[node name="Title" type="Label" parent="UILayer/Menu"]
anchor_right = 1.0
margin_top = 17.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 15 )
text = "OPTIONS"
align = 1
valign = 1

[node name="MenuButton" type="TextureButton" parent="UILayer/Menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -38.0
margin_right = 96.0
texture_hover = ExtResource( 1 )
expand = true
stretch_mode = 1
script = ExtResource( 8 )

[node name="Label" type="Label" parent="UILayer/Menu/MenuButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -12.0
margin_right = 36.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 14 )
text = "menu"
align = 1
valign = 1

[node name="OptionsContainer" type="VBoxContainer" parent="UILayer/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -82.0
margin_right = 280.0
margin_bottom = 125.0
custom_constants/separation = 2
alignment = 1

[node name="ToggleContainer" type="HBoxContainer" parent="UILayer/Menu/OptionsContainer"]
margin_left = 126.0
margin_top = 19.0
margin_right = 433.0
margin_bottom = 75.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 25

[node name="Column1" type="VBoxContainer" parent="UILayer/Menu/OptionsContainer/ToggleContainer"]
margin_right = 163.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SightToggle" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1" instance=ExtResource( 12 )]
unique_name_in_owner = true
margin_left = 80.0
margin_right = 163.0
margin_bottom = 16.0
text = "laser sight:"

[node name="SFXControl" type="HBoxContainer" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1"]
unique_name_in_owner = true
margin_top = 20.0
margin_right = 163.0
margin_bottom = 36.0
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2
script = ExtResource( 16 )

[node name="Label" type="Label" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/SFXControl"]
margin_top = 4.0
margin_right = 79.0
margin_bottom = 12.0
text = "sound effects:"

[node name="Slider" type="HSlider" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/SFXControl"]
margin_left = 83.0
margin_right = 143.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 16 )
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -30.0
max_value = 0.0

[node name="Toggle" type="TextureButton" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/SFXControl"]
margin_left = 147.0
margin_right = 163.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 15 )
expand = true

[node name="MusicControl" type="HBoxContainer" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1"]
unique_name_in_owner = true
margin_left = 49.0
margin_top = 40.0
margin_right = 163.0
margin_bottom = 56.0
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2
script = ExtResource( 16 )

[node name="Label" type="Label" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/MusicControl"]
margin_top = 4.0
margin_right = 30.0
margin_bottom = 12.0
text = "music:"

[node name="Slider" type="HSlider" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/MusicControl"]
margin_left = 34.0
margin_right = 94.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 16 )
size_flags_vertical = 4
custom_icons/grabber_highlight = ExtResource( 9 )
custom_icons/grabber = ExtResource( 9 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 4 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -30.0
max_value = 0.0

[node name="Toggle" type="TextureButton" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/MusicControl"]
margin_left = 98.0
margin_right = 114.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 15 )
expand = true

[node name="Column2" type="VBoxContainer" parent="UILayer/Menu/OptionsContainer/ToggleContainer"]
margin_left = 188.0
margin_right = 307.0
margin_bottom = 56.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CooldownToggle" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column2" instance=ExtResource( 12 )]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 119.0
margin_bottom = 16.0
text = "display cooldown:"

[node name="TimerToggle" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column2" instance=ExtResource( 12 )]
unique_name_in_owner = true
margin_left = 26.0
margin_top = 20.0
margin_right = 119.0
margin_bottom = 36.0
text = "display timer:"

[node name="DifficultyToggle" parent="UILayer/Menu/OptionsContainer/ToggleContainer/Column2" instance=ExtResource( 12 )]
unique_name_in_owner = true
margin_top = 40.0
margin_right = 119.0
margin_bottom = 56.0
text = "display difficulty:"

[node name="BulletColour" parent="UILayer/Menu/OptionsContainer" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 77.0
margin_right = 551.0
margin_bottom = 102.0
defaultPropertyName = "bulletColourDefault"

[node name="Label" parent="UILayer/Menu/OptionsContainer/BulletColour" index="0"]
margin_top = 8.0
margin_right = 78.0
margin_bottom = 16.0
rect_min_size = Vector2( 78, 8 )
text = "bullet colour: "

[node name="SliderContainer" parent="UILayer/Menu/OptionsContainer/BulletColour" index="1"]
margin_left = 83.0
margin_top = 0.0
margin_right = 458.0
margin_bottom = 25.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider1" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider1" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider1" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider2" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider2" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider2" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider3" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider3" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/BulletColour/SliderContainer/NumberSlider3" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="ColourDisplay" parent="UILayer/Menu/OptionsContainer/BulletColour" index="2"]
margin_left = 463.0
margin_top = 0.0
margin_right = 488.0
margin_bottom = 25.0

[node name="ResetButton" parent="UILayer/Menu/OptionsContainer/BulletColour" index="3"]
margin_left = 493.0
margin_top = 0.0
margin_right = 543.0
margin_bottom = 25.0

[node name="SightColour" parent="UILayer/Menu/OptionsContainer" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 104.0
margin_right = 551.0
margin_bottom = 129.0
defaultPropertyName = "sightColourDefault"

[node name="Label" parent="UILayer/Menu/OptionsContainer/SightColour" index="0"]
margin_top = 8.0
margin_right = 78.0
margin_bottom = 16.0
rect_min_size = Vector2( 78, 8 )
text = "sight colour: "

[node name="SliderContainer" parent="UILayer/Menu/OptionsContainer/SightColour" index="1"]
margin_left = 83.0
margin_top = 0.0
margin_right = 458.0
margin_bottom = 25.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider1" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider1" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider1" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider2" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider2" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider2" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider3" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider3" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/SightColour/SliderContainer/NumberSlider3" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="ColourDisplay" parent="UILayer/Menu/OptionsContainer/SightColour" index="2"]
margin_left = 463.0
margin_top = 0.0
margin_right = 488.0
margin_bottom = 25.0

[node name="ResetButton" parent="UILayer/Menu/OptionsContainer/SightColour" index="3"]
margin_left = 493.0
margin_top = 0.0
margin_right = 543.0
margin_bottom = 25.0

[node name="TrailColour" parent="UILayer/Menu/OptionsContainer" instance=ExtResource( 10 )]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 131.0
margin_right = 551.0
margin_bottom = 156.0
defaultPropertyName = "trailColourDefault"

[node name="Label" parent="UILayer/Menu/OptionsContainer/TrailColour" index="0"]
margin_top = 8.0
margin_right = 78.0
margin_bottom = 16.0
rect_min_size = Vector2( 78, 8 )
text = "trail colour: "

[node name="SliderContainer" parent="UILayer/Menu/OptionsContainer/TrailColour" index="1"]
margin_left = 83.0
margin_top = 0.0
margin_right = 458.0
margin_bottom = 25.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider1" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider1" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider1" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider2" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider2" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider2" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="Label" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider3" index="0"]
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0

[node name="Slider" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider3" index="1"]
margin_left = 12.0
margin_right = 72.0

[node name="Number" parent="UILayer/Menu/OptionsContainer/TrailColour/SliderContainer/NumberSlider3" index="2"]
margin_left = 76.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 16.0

[node name="ColourDisplay" parent="UILayer/Menu/OptionsContainer/TrailColour" index="2"]
margin_left = 463.0
margin_top = 0.0
margin_right = 488.0
margin_bottom = 25.0

[node name="ResetButton" parent="UILayer/Menu/OptionsContainer/TrailColour" index="3"]
margin_left = 493.0
margin_top = 0.0
margin_right = 543.0
margin_bottom = 25.0

[node name="ResetHighScore" type="TextureButton" parent="UILayer/Menu/OptionsContainer"]
margin_left = 205.0
margin_top = 158.0
margin_right = 355.0
margin_bottom = 188.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="UILayer/Menu/OptionsContainer/ResetHighScore"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -12.0
margin_right = 128.0
margin_bottom = 12.0
text = "reset high score"
align = 1
valign = 1

[node name="ResetCheckPanel" type="Panel" parent="UILayer/Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -71.0
margin_right = 133.0
margin_bottom = 32.0
mouse_filter = 2

[node name="Title" type="Label" parent="UILayer/Menu/ResetCheckPanel"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 46.0
text = "Are you sure you want to reset high score?"
align = 1
valign = 1
autowrap = true

[node name="Warning" type="Label" parent="UILayer/Menu/ResetCheckPanel"]
anchor_right = 1.0
margin_top = 43.0
margin_bottom = 68.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "CANNOT BE UNDONE"
align = 1
valign = 1
autowrap = true

[node name="ButtonContainer" type="HBoxContainer" parent="UILayer/Menu/ResetCheckPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -33.0
margin_bottom = -8.0
mouse_filter = 2
custom_constants/separation = 50
alignment = 1

[node name="YesButton" type="TextureButton" parent="UILayer/Menu/ResetCheckPanel/ButtonContainer"]
margin_left = 58.0
margin_right = 108.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 10 )
mouse_filter = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="UILayer/Menu/ResetCheckPanel/ButtonContainer/YesButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Yes"
align = 1
valign = 1

[node name="NoButton" type="TextureButton" parent="UILayer/Menu/ResetCheckPanel/ButtonContainer"]
margin_left = 158.0
margin_right = 208.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 25 )
mouse_filter = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="UILayer/Menu/ResetCheckPanel/ButtonContainer/NoButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "No"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UILayer/Menu/ResetCheckPanel"]
anims/Off = SubResource( 19 )
anims/On = SubResource( 17 )
anims/RESET = SubResource( 18 )

[connection signal="pressed" from="UILayer/Menu/MenuButton" to="UILayer/Menu/MenuButton" method="_on_pressed"]
[connection signal="toggled" from="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/SightToggle" to="UILayer/Menu" method="_on_value_toggled" binds= [ "sightToggle" ]]
[connection signal="value_changed" from="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/SFXControl/Slider" to="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/SFXControl" method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/SFXControl/Toggle" to="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/SFXControl" method="_on_SFXToggle_toggled"]
[connection signal="value_changed" from="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/MusicControl/Slider" to="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/MusicControl" method="_on_MusicSlider_value_changed"]
[connection signal="toggled" from="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/MusicControl/Toggle" to="UILayer/Menu/OptionsContainer/ToggleContainer/Column1/MusicControl" method="_on_MusicToggle_toggled"]
[connection signal="toggled" from="UILayer/Menu/OptionsContainer/ToggleContainer/Column2/CooldownToggle" to="UILayer/Menu" method="_on_value_toggled" binds= [ "cooldownToggle" ]]
[connection signal="toggled" from="UILayer/Menu/OptionsContainer/ToggleContainer/Column2/TimerToggle" to="UILayer/Menu" method="_on_value_toggled" binds= [ "timerToggle" ]]
[connection signal="toggled" from="UILayer/Menu/OptionsContainer/ToggleContainer/Column2/DifficultyToggle" to="UILayer/Menu" method="_on_value_toggled" binds= [ "difficultyToggle" ]]
[connection signal="colour_changed" from="UILayer/Menu/OptionsContainer/BulletColour" to="UILayer/Menu" method="_on_BulletColour_changed"]
[connection signal="colour_changed" from="UILayer/Menu/OptionsContainer/SightColour" to="UILayer/Menu" method="_on_SightColour_changed"]
[connection signal="colour_changed" from="UILayer/Menu/OptionsContainer/TrailColour" to="UILayer/Menu" method="_on_TrailColour_changed"]
[connection signal="pressed" from="UILayer/Menu/OptionsContainer/ResetHighScore" to="UILayer/Menu" method="_on_ResetHighScore_pressed"]
[connection signal="pressed" from="UILayer/Menu/ResetCheckPanel/ButtonContainer/YesButton" to="UILayer/Menu" method="_on_ResetHighScoreConfirm"]
[connection signal="pressed" from="UILayer/Menu/ResetCheckPanel/ButtonContainer/NoButton" to="UILayer/Menu/ResetCheckPanel/AnimationPlayer" method="play" binds= [ "Off" ]]

[editable path="UILayer/Menu/OptionsContainer/BulletColour"]
[editable path="UILayer/Menu/OptionsContainer/SightColour"]
[editable path="UILayer/Menu/OptionsContainer/TrailColour"]
